alexDev2/force-app/main/default/objects/AlexCustomObject__c/AlexCustomObject__c.object-meta.xml
<CustomObject>
    <label>AlexCustomObject</label>
    <nameField>
        <label>AlexCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AlexCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>