alexDev2/force-app/main/default/objects/AlexCustomObject__c/fields/ACurrency__c.field-meta.xml
<CustomField>
    <fullName>ACurrency__c</fullName>
    <label>ACurrency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>